--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,12 +9,16 @@ on:
 jobs:
   scheduled:
     runs-on: ubuntu-latest
+    environment: default
+    name: default
+    container: python:3.9
     steps:
     - name: Check out this repo
       uses: actions/checkout@v2
+    - name: pip install
+      run: pip install -r requirements.txt
     - name: Fetch latest data
-      run: |-
-        curl https://www.sunweb.nl/api/sitecore/SearchApi/GetSearchResponse?Duration%5B0%5D=8-10&sort=Price&contextitemid=38b1ea16-284c-40c9-af10-61c5bb8ce520&isFirstUserRequest=True&Allocation=20&isFirstLoad=true&offset=0&limit=50 | jq '.results' > listings.json
+      run: python main.py
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
